fix overflow

--- a/src/index.css
+++ b/src/index.css
@@ -10,7 +10,6 @@
 
 #root {
   overflow-y: hidden;
-  min-height: 700px;
 }
 
 @layer components {
